--- a/group_vars/pg/vars.yml
+++ b/group_vars/pg/vars.yml
@@ -9,6 +9,8 @@ provisioned_disks:
         size: "100%FREE"
         mode: "0700"
 
+node_exporter_config_firewall: false
+
 postgresql_version: 14
 postgresql_daemon: "postgresql-{{ postgresql_version }}"
 postgresql_bin_path: "/usr/pgsql-{{ postgresql_version }}/bin"
