--- a/playbooks/loki.yml
+++ b/playbooks/loki.yml
@@ -2,24 +2,11 @@
 
 - hosts: loki
   gather_facts: true
+  pre_tasks:
+    - name: Include common tasks
+      ansible.builtin.include_tasks:
+        file: ../tasks/common_servers.yml
+      tags: ["always"]
   roles:
-    - role: setup_disks
-      tags: ["disk"]
-
-    - role: firewall_config
-      tags: ["firewall"]
-
-    - role: sshd
-      tags: ["sshd"]
-
-    - role: cosandr.dnf_automatic
-      tags: ["dnf_automatic"]
-
-    - role: node_exporter
-      tags: ["node_exporter"]
-
     - role: loki
       tags: ["loki"]
-
-    - role: promtail
-      tags: ["promtail"]
