--- a/playbooks/backup.yml
+++ b/playbooks/backup.yml
@@ -68,6 +68,11 @@
   become: true
   hosts: backup
   pre_tasks:
+    - name: Include common tasks
+      ansible.builtin.include_tasks:
+        file: ../tasks/common_servers.yml
+      tags: ["always"]
+
     - name: Append hosts
       set_fact:
         borg_auth_users: "{{ borg_auth_users + [{ 'host': hostvars[item].ansible_hostname, 'key': hostvars[item].__ssh_key.public_key }] }}"
@@ -105,11 +110,5 @@
       tags: ["nfs"]
 
   roles:
-    - role: cosandr.dnf_automatic
-      tags: ["dnf_automatic"]
-
-    - role: node_exporter
-      tags: ["node_exporter"]
-
     - role: borg
       tags: ["borg"]
