--- a/playbooks/gitlab.yml
+++ b/playbooks/gitlab.yml
@@ -2,21 +2,14 @@
 
 - hosts: gitlab
   gather_facts: true
+  pre_tasks:
+    - name: Include common tasks
+      ansible.builtin.include_tasks:
+        file: ../tasks/common_servers.yml
+      tags: ["always"]
   roles:
-    - role: setup_disks
-      tags: ["disk"]
-
-    - role: firewall_config
-      tags: ["firewall"]
-
-    - role: sshd
-      tags: ["sshd"]
-
     - role: geerlingguy.gitlab
       tags: ["gitlab"]
-
-    - role: cosandr.dnf_automatic
-      tags: ["dnf_automatic"]
 
     - role: systemd
       tags: ["systemd"]
@@ -99,20 +92,5 @@
       tags: ["runner"]
 
   roles:
-    - role: setup_disks
-      tags: ["disk"]
-
-    - role: firewall_config
-      tags: ["firewall"]
-
-    - role: sshd
-      tags: ["sshd"]
-
-    - role: cosandr.dnf_automatic
-      tags: ["dnf_automatic"]
-
     - role: gitlab_runner
       tags: ["runner"]
-
-    - role: node_exporter
-      tags: ["node_exporter"]
