--- a/playbooks/kube.yml
+++ b/playbooks/kube.yml
@@ -23,14 +23,10 @@
         masked: true
       tags: ["firewalld"]
 
-  roles:
-    - role: sshd
-      tags: ["sshd"]
-
-    - role: cosandr.dnf_automatic
-      vars:
-        dnf_automatic_upgrade_type: "security"
-      tags: ["dnf_automatic"]
+    - name: Include common tasks
+      ansible.builtin.include_tasks:
+        file: ../tasks/common_servers.yml
+      tags: ["always"]
 
 - name: Deploy charts and manifests
   hosts: k8s_cluster[0]
