--- a/playbooks/nextcloud.yml
+++ b/playbooks/nextcloud.yml
@@ -3,17 +3,10 @@
 - hosts: nextcloud
   gather_facts: true
   pre_tasks:
-    - name: Disable some default services
-      firewalld:
-        zone: "{{ item.zone }}"
-        service: "{{ item.service }}"
-        permanent: true
-        state: disabled
-      loop:
-        - zone: public
-          service: cockpit
-      notify: reload firewalld
-      tags: ["firewalld"]
+    - name: Include common tasks
+      ansible.builtin.include_tasks:
+        file: ../tasks/common_servers.yml
+      tags: ["always"]
 
     - name: Install rclone
       dnf:
@@ -21,12 +14,6 @@
         state: present
       tags: ["rclone"]
   roles:
-    - role: setup_disks
-      tags: ["disk"]
-
-    - role: cosandr.dnf_automatic
-      tags: ["dnf_automatic"]
-
     - role: firewalld_webgw
       tags: ["firewalld"]
 
@@ -35,12 +22,3 @@
 
     - role: systemd
       tags: ["systemd", "rclone"]
-
-    - role: node_exporter
-      tags: ["node_exporter"]
-
-  handlers:
-    - name: reload firewalld
-      service:
-        name: firewalld
-        state: reloaded
