--- a/playbooks/pg.yml
+++ b/playbooks/pg.yml
@@ -3,22 +3,12 @@
 # TODO: Configure NFS share on Theia for /mnt/tank/backup/pgbackrest
 
 - hosts: db
+  pre_tasks:
+    - name: Include common tasks
+      ansible.builtin.include_tasks:
+        file: ../tasks/common_servers.yml
+      tags: ["always"]
   roles:
-    - role: setup_disks
-      tags: ["disk"]
-
-    - role: node_exporter
-      vars:
-        # Configured by firewall role
-        node_exporter_config_firewall: false
-      tags: ["node_exporter"]
-
-    - role: cosandr.dnf_automatic
-      tags: ["dnf_automatic"]
-
-    - role: firewall_config
-      tags: ["firewall"]
-
     - role: pgbackrest
       tags: ["pgbackrest"]
 
