--- a/playbooks/plex.yml
+++ b/playbooks/plex.yml
@@ -3,6 +3,11 @@
 - hosts: plex
   become: true
   pre_tasks:
+    - name: Include common tasks
+      ansible.builtin.include_tasks:
+        file: ../tasks/common_servers.yml
+      tags: ["always"]
+
     - name: Disable some default services
       firewalld:
         zone: "{{ item.zone }}"
@@ -15,17 +20,8 @@
       notify: reload firewalld
       tags: ["firewalld"]
   roles:
-    - role: setup_disks
-      tags: ["disk"]
-
-    - role: cosandr.dnf_automatic
-      tags: ["dnf_automatic"]
-
     - role: firewalld_webgw
       tags: ["firewalld"]
-
-    - role: node_exporter
-      tags: ["node_exporter"]
 
   tasks:
     - name: Mount media share
