--- a/playbooks/prom.yml
+++ b/playbooks/prom.yml
@@ -3,6 +3,11 @@
 - hosts: prom
   gather_facts: true
   pre_tasks:
+    - name: Include common tasks
+      ansible.builtin.include_tasks:
+        file: ../tasks/common_servers.yml
+      tags: ["always"]
+
     - name: Configure rsyslog
       when: promtail_syslog_port
       block:
@@ -50,14 +55,8 @@
       tags: ["rsyslog"]
 
   roles:
-    - role: setup_disks
-      tags: ["disk"]
-
     - role: firewalld_webgw
       when: webgw_ports
-      tags: ["firewall"]
-
-    - role: firewall_config
       tags: ["firewall"]
 
     - role: prometheus
@@ -68,9 +67,6 @@
 
     - role: blackbox_exporter
       tags: ["blackbox_exporter"]
-
-    - role: node_exporter
-      tags: ["node_exporter"]
 
     - role: ipmi_exporter
       when: ipmi_exporter_modules
@@ -83,9 +79,6 @@
     - role: grafana
       when: grafana_database
       tags: ["grafana"]
-
-    - role: cosandr.dnf_automatic
-      tags: ["dnf_automatic"]
 
     - role: cloudalchemy.pushgateway
       when: pushgateway_port
