--- a/group_vars/elasticsearch/vars.yml
+++ b/group_vars/elasticsearch/vars.yml
@@ -1,7 +1,7 @@
 ---
 
 provisioned_disks:
-  - dev: "/dev/sdb"
+  - dev: "/dev/disk/by-id/virtio-data01"
     vols:
       - name: elasticsearch
         path: "/var/lib/elasticsearch"
