--- a/group_vars/gitlab/vars.yml
+++ b/group_vars/gitlab/vars.yml
@@ -3,7 +3,7 @@
 ansible_host6: "{{ home_net.vm.cidr6 | ansible.utils.ipaddr('0x40' | int(base=16)) | ansible.utils.ipaddr('address') }}"
 
 provisioned_disks:
-  - dev: "/dev/sdb"
+  - dev: "/dev/disk/by-id/virtio-data01"
     vols:
       - name: gitlab
         path: "/var/opt/gitlab"
