Remove VMware stuff

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,7 +8,7 @@ host_key_checking = False
 force_handlers = True
 
 [inventory]
-enable_plugins = vmware_vm_inventory,ini
+enable_plugins = ini
 
 [passwordstore_lookup]
 backend = gopass
