Remove ports variable and its usages
It hasn't been used for a long time and it was a dumb way of doing it anyway.

--- a/roles/fail2ban/defaults/main.yml
+++ b/roles/fail2ban/defaults/main.yml
@@ -11,3 +11,5 @@ fail2ban_ignoreip:
 fail2ban_sshd_extra: {}
   # maxretry: 2
   # bantime: 8h
+fail2ban_bitwarden_install: false
+fail2ban_bitwarden_ports: [80, 443]
