--- a/roles/fail2ban/tasks/main.yml
+++ b/roles/fail2ban/tasks/main.yml
@@ -24,10 +24,7 @@
       mode: 0644
     notify: restart fail2ban
 
-  when:
-    - ports is defined
-    - ports.bitwarden is defined
-    - ports.bitwarden_notifications is defined
+  when: fail2ban_bitwarden_install
 
 - name: Copy global jail
   template:
