Move smartd to own role and install it on hypervisors

--- a/group_vars/servers/vars.yml
+++ b/group_vars/servers/vars.yml
@@ -4,6 +4,8 @@ proxy_hosts:
   - "{{ hostvars['webgw01'].wireguard_ip }}"
   - "{{ hostvars['localgw01'].ansible_host }}"
 
+smartd_email: "{{ my_email }}"
+
 smtp_config: "{{ vault_smtp_config }}"
 # smtp_config:
 #   example.com:
