--- a/group_vars/thinkcentre/auto-ssh.yml
+++ b/group_vars/thinkcentre/auto-ssh.yml
@@ -2,3 +2,4 @@
 
 ssh_dest_hosts: "{{ groups['thinkcentre'] | difference([inventory_hostname]) }}"
 ssh_conf_hosts: true
+ssh_known_hosts_file: "/etc/ssh/ssh_known_hosts"
