--- a/playbooks/thinkcentre.yml
+++ b/playbooks/thinkcentre.yml
@@ -22,6 +22,11 @@
     - role: auto_ssh
       tags: ["auto-ssh"]
   tasks:
+    - name: Include common tasks
+      ansible.builtin.include_tasks:
+        file: ../tasks/common_servers.yml
+      tags: ["always"]
+
     - name: Include hypervisor tasks
       ansible.builtin.include_tasks:
         file: ../tasks/kvm_hypervisors.yml
