--- a/playbooks/backup.yml
+++ b/playbooks/backup.yml
@@ -93,7 +93,7 @@
 
     - name: Mount tank NFS share
       mount:
-        src: "{{ hostvars['theia'].local_ips.vm }}:/mnt/tank"
+        src: "{{ hostvars['theia'].host_ips.vm }}:/mnt/tank"
         path: "/mnt/tank"
         opts: "defaults,vers=4,ro,noatime,bg"
         state: mounted
@@ -102,7 +102,7 @@
 
     - name: Mount Borg NFS share
       mount:
-        src: "{{ hostvars['theia'].local_ips.vm }}:/mnt/tank/borg/repos"
+        src: "{{ hostvars['theia'].host_ips.vm }}:/mnt/tank/borg/repos"
         path: "{{ borg_pool }}"
         opts: "defaults,vers=4,rw,noatime,bg"
         state: mounted
