--- a/playbooks/plex.yml
+++ b/playbooks/plex.yml
@@ -27,7 +27,7 @@
   tasks:
     - name: Mount media share
       mount:
-        src: "{{ hostvars['theia'].local_ips.vm }}:/mnt/tank/media"
+        src: "{{ hostvars['theia'].host_ips.vm }}:/mnt/tank/media"
         path: "/tank/media"
         opts: "defaults,vers=4,ro,noatime,noexec,bg"
         state: mounted
