--- a/host_vars/theia/nfs.yml
+++ b/host_vars/theia/nfs.yml
@@ -10,6 +10,10 @@ nfs_shares:
   - path: /srv/kube
     options: "rw,no_root_squash"
     sources: "{{ groups['k8s_cluster'] | map('extract', hostvars, 'ansible_host') | list }}"
+  # libvirt shares
+  - path: /srv/libvirt
+    options: "rw,no_root_squash"
+    sources: "{{ groups['thinkcentre'] | map('extract', hostvars, 'host_ips') | map(attribute='san') | list }}"
   # Backup shares
   - path: /mnt/tank/backup/pgsql
     options: "rw,no_root_squash"
