--- a/playbooks/thinkcentre.yml
+++ b/playbooks/thinkcentre.yml
@@ -132,6 +132,16 @@
         mode: 0755
       tags: ["libvirt", "nfs"]
 
+    - name: Enable virt_use_nfs SELinux boolean
+      ansible.posix.seboolean:
+        name: virt_use_nfs
+        state: true
+        persistent: true
+      when:
+        - ansible_os_family == 'RedHat'
+        - ansible_selinux.status == "enabled"
+      tags: ["libvirt", "nfs", "selinux"]
+
     - name: Define libvirt NFS pool
       community.libvirt.virt_pool:
         name: theia
