--- a/group_vars/thinkcentre/auto-ssh.yml
+++ b/group_vars/thinkcentre/auto-ssh.yml
@@ -3,3 +3,9 @@
 ssh_dest_hosts: "{{ groups['thinkcentre'] | difference([inventory_hostname]) }}"
 ssh_conf_hosts: true
 ssh_known_hosts_file: "/etc/ssh/ssh_known_hosts"
+ssh_conf_hosts_names:
+  - "{{ inventory_hostname }}"
+ssh_custom_host_names:
+  - "{{ inventory_hostname }}.vm.{{ domain }}"
+  - "{{ host_ips.san }}"
+  - "{{ inventory_hostname }}.san.{{ domain }}"
