Node exporter updates
- Set default in role to latest
- Set 1.5.0 in inventory.
- Skip more ufw tasks when configuring firewall
- Skip firewall config on webgw and dresrv
- Skip installation when using docker or other methods

--- a/host_vars/romsto/vars.yml
+++ b/host_vars/romsto/vars.yml
@@ -6,3 +6,5 @@ ssh_port: "{{ vault_ssh_port }}"
 syncthing_port: "{{ vault_syncthing_port }}"
 cadvisor_port: "9101"
 nextcloud_port: "25683"
+# Running in Docker
+node_exporter_installed: false
