--- a/group_vars/webgw/node_exporter.yml
+++ b/group_vars/webgw/node_exporter.yml
@@ -1,5 +1,6 @@
 ---
 
+node_exporter_config_firewall: false
 node_exporter_port: "9100"
 node_exporter_web_listen_address: "{{ wireguard_ip | default('0.0.0.0') }}:{{ node_exporter_port }}"
 node_exporter_collectors:
