--- a/host_vars/laptop/vars.yml
+++ b/host_vars/laptop/vars.yml
@@ -1,6 +1,7 @@
 ---
 
 node_exporter_web_listen_address: "0.0.0.0:{{ node_exporter_port }}"
+node_exporter_collectors: []
 borg_laptop_passphrase: "{{ vault_borg_laptop_passphrase }}"
 desktop_environment: "sway"
 autorandr_install_lid_listener: true
