--- a/roles/node_exporter/defaults/main.yml
+++ b/roles/node_exporter/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-node_exporter_version: 1.4.0
+node_exporter_version: "latest"
 
 node_exporter_db_dir: /var/lib/node_exporter
 
@@ -15,3 +15,4 @@ node_exporter_required_services: []
 
 node_exporter_config_firewall: true
 node_exporter_allow_ips: []
+node_exporter_firewalld_zone: public
