Initial pg-cert-store implementation
- Add postgres service to public zone
- Allow any address to connect to the certs database as certs_reader
- Replace SSH hook with push-certs on localgw01
- Use certs for minio and cockpit

--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "roles/firewall_config"]
 	path = roles/firewall_config
 	url = git@github.com:cosandr/ansible-role-firewall-config.git
+[submodule "roles/pg_cert_store"]
+	path = roles/pg_cert_store
+	url = git@github.com:cosandr/ansible-role-pg-cert-store.git
