--- a/host_vars/localgw01/certbot.yml
+++ b/host_vars/localgw01/certbot.yml
@@ -1,22 +1,12 @@
 ---
 
 __host_certbot_renew_hooks:
-  - name: sync-certs
+  - name: push-certs
     type: deploy
     content: |
-      #!/bin/bash
+      #!/bin/sh
 
-      set -e
-
-      copy_cert() {
-          for d in $RENEWED_DOMAINS; do
-              if [[ $d == "$2" ]]; then
-                  scp /etc/letsencrypt/live/"${d}"/fullchain.pem "$1":/etc/nginx/certs/"${d}".pem
-                  scp /etc/letsencrypt/live/"${d}"/privkey.pem "$1":/etc/nginx/certs/"${d}".key
-                  ssh "$1" systemctl restart nginx
-              fi
-          done
-      }
-      {% for h in groups['minio'] %}
-      copy_cert "root@{{ hostvars[h].ansible_host }}" "{{ hostvars[h].domain }}"
-      {% endfor %}
+      /usr/local/bin/pg-cert-push \
+          --name "$(basename "$RENEWED_LINEAGE")" \
+          --public-key "${RENEWED_LINEAGE}/fullchain.pem" \
+          --private-key "${RENEWED_LINEAGE}/privkey.pem"
