Limit ZFS ARC on Theia

--- a/host_vars/theia/zfs.yml
+++ b/host_vars/theia/zfs.yml
@@ -1,5 +1,6 @@
 ---
 
+zfs_arc_max_gb: 8
 zfs_zed_options:
   - regexp: '^#?ZED_SLACK_WEBHOOK_URL'
     line: 'ZED_SLACK_WEBHOOK_URL="{{ vault_zfs_zed_slack_webhook }}"'
