--- a/group_vars/prom/prometheus.yml
+++ b/group_vars/prom/prometheus.yml
@@ -176,6 +176,12 @@ __extra_prometheus_scrape_configs:
       - targets:
         - "{{ hostvars['dresrv'].ansible_host }}:9090"
 
+  - job_name: "ceph"
+    scrape_interval: 15s
+    honor_labels: true
+    static_configs:
+      - targets: "{{ groups['ceph'] | map('extract', hostvars, 'ansible_host') | map('regex_replace', '$', ':' + (ceph_exporter_port | string)) | list }}"
+
   - job_name: "pushgateway"
     static_configs:
       - targets: ["localhost:{{ pushgateway_port }}"]
