--- a/group_vars/thinkcentre/firewall.yml
+++ b/group_vars/thinkcentre/firewall.yml
@@ -1,8 +1,16 @@
 ---
 
+firewalld_default_zone: cluster
+__cluster_sources:
+  - "{{ groups['ceph'] | difference([inventory_hostname]) | map('extract', hostvars, 'host_ips') | map(attribute='san') | list }}"
+  - "{{ groups['ceph'] | difference([inventory_hostname]) | map('extract', hostvars, 'host_ips') | map(attribute='mgmt') | list }}"
+
 node_exporter_config_firewall: false
 
 firewalld_zones:
+  - name: cluster
+    sources: "{{ __cluster_sources | flatten }}"
+
   - name: internal
     interfaces:
       - MGMT
@@ -15,6 +23,12 @@ firewalld_zones:
       - NOINET
 
 firewalld_services:
+  - name: ssh
+    zone: cluster
+
+  - name: nfs3
+    zone: cluster
+
   - name: cockpit
     zone: public
     state: absent
@@ -39,8 +53,15 @@ firewall_rules:
     zone: internal
     sources: "{{ node_exporter_allow_ips }}"
 
+  - port: "{{ ceph_exporter_port }}"
+    zone: internal
+    sources: "{{ node_exporter_allow_ips }}"
+
+  - port: "{{ ceph_dashboard_port }}"
+    zone: internal
+    sources: "{{ firewall_trusted_sources }}"
+
   # https://wiki.libvirt.org/page/FAQ#What_are_the_different_migration_methods.3F
   - port: "49152-49215"
     protocol: tcp
-    zone: internal
-    sources: "{{ groups['thinkcentre'] | difference([inventory_hostname]) | map('extract', hostvars, 'host_ips') | map(attribute='mgmt') | list }}"
+    zone: cluster
