--- a/host_vars/m1bp/wireguard.yml
+++ b/host_vars/m1bp/wireguard.yml
@@ -6,15 +6,15 @@ wireguard_addresses:
   - "{{ wg_net.mt.cidr6 | ansible.utils.ipaddr('0x34' | int(base=16)) }}"
 
 wireguard_dns_list:
-  - "{{ hostvars['mt-router'].wireguard_ip }}"
-  - "{{ hostvars['mt-router'].wireguard_ipv6 }}"
+  - "{{ hostvars['rb5009'].wireguard_ip }}"
+  - "{{ hostvars['rb5009'].wireguard_ipv6 }}"
   - "1.1.1.1"
   - "8.8.8.8"
 
 wireguard_mt_allowed_ips:
-  - "{{ hostvars['mt-router'].wireguard_ip }}/32"
+  - "{{ hostvars['rb5009'].wireguard_ip }}/32"
   - "{{ home_net | dict2items | json_query('[].value.cidr') }}"
-  - "{{ hostvars['mt-router'].wireguard_ipv6 }}/128"
+  - "{{ hostvars['rb5009'].wireguard_ipv6 }}/128"
   - "{{ home_net | dict2items | json_query('[].value.cidr6') }}"
 
 wireguard_address: "{{ wireguard_addresses | join(', ') }}"
@@ -25,6 +25,6 @@ wireguard_private_key: "{{ vault_wireguard_private_key }}"
 
 wireguard_unmanaged_peers:
   mt:
-    endpoint: "{{ hostvars['mt-router'].wireguard_endpoint }}"
+    endpoint: "{{ hostvars['rb5009'].wireguard_endpoint }}"
     allowed_ips: "{{ wireguard_mt_allowed_ips | flatten | join(', ') }}"
-    public_key: "{{ hostvars['mt-router'].wireguard_public_key }}"
+    public_key: "{{ hostvars['rb5009'].wireguard_public_key }}"
