--- a/host_vars/romgw01/wireguard.yml
+++ b/host_vars/romgw01/wireguard.yml
@@ -7,9 +7,9 @@ wireguard_addresses:
   - "{{ wg_net.mt.cidr6 | ansible.utils.ipaddr('0x209' | int(base=16)) }}"
 
 wireguard_mt_allowed_ips:
-  - "{{ hostvars['mt-router'].wireguard_ip }}/32"
+  - "{{ hostvars['rb5009'].wireguard_ip }}/32"
   - "{{ hostvars['loki01'].ansible_host }}/32"
-  - "{{ hostvars['mt-router'].wireguard_ipv6 }}/128"
+  - "{{ hostvars['rb5009'].wireguard_ipv6 }}/128"
 
 wireguard_webgw_allowed_ips:
   - "{{ hostvars['webgw01'].wireguard_ip }}/32"
@@ -24,9 +24,9 @@ wireguard_persistent_keepalive: 300
 
 wireguard_unmanaged_peers:
   mt:
-    endpoint: "{{ hostvars['mt-router'].wireguard_endpoint }}"
+    endpoint: "{{ hostvars['rb5009'].wireguard_endpoint }}"
     allowed_ips: "{{ wireguard_mt_allowed_ips | join(', ') }}"
-    public_key: "{{ hostvars['mt-router'].wireguard_public_key }}"
+    public_key: "{{ hostvars['rb5009'].wireguard_public_key }}"
     persistent_keepalive: "{{ wireguard_persistent_keepalive }}"
   webgw:
     endpoint: "{{ hostvars['webgw01'].wireguard_endpoint }}"
