--- a/host_vars/romsto/wireguard.yml
+++ b/host_vars/romsto/wireguard.yml
@@ -7,13 +7,13 @@ wireguard_addresses:
   # - "{{ wg_net.mt.cidr6 | ansible.utils.ipaddr('0x206' | int(base=16)) }}"
 
 wireguard_mt_allowed_ips:
-  - "{{ hostvars['mt-router'].wireguard_ip }}/32"
+  - "{{ hostvars['rb5009'].wireguard_ip }}/32"
   - "{{ hostvars['dresrv'].ansible_host }}/32"
   - "{{ hostvars['drepi'].ansible_host }}/32"
   - "{{ hostvars['prom01'].ansible_host }}/32"
   - "{{ hostvars['backup01'].ansible_host }}/32"
   - "{{ hostvars['loki01'].ansible_host }}/32"
-  # - "{{ hostvars['mt-router'].wireguard_ipv6 }}/128"
+  # - "{{ hostvars['rb5009'].wireguard_ipv6 }}/128"
 
 wireguard_address: "{{ wireguard_addresses | join(', ') }}"
 wireguard_ip: "{{ wireguard_addresses[0] | ansible.utils.ipaddr('address') }}"
@@ -22,9 +22,9 @@ wireguard_public_key: "{{ vault_wireguard_public_key }}"
 
 wireguard_unmanaged_peers:
   mt:
-    endpoint: "{{ hostvars['mt-router'].wireguard_endpoint }}"
+    endpoint: "{{ hostvars['rb5009'].wireguard_endpoint }}"
     allowed_ips: "{{ wireguard_mt_allowed_ips | join(', ') }}"
-    public_key: "{{ hostvars['mt-router'].wireguard_public_key }}"
+    public_key: "{{ hostvars['rb5009'].wireguard_public_key }}"
     persistent_keepalive: "{{ wireguard_persistent_keepalive }}"
   webgw:
     endpoint: "{{ hostvars['webgw01'].wireguard_endpoint }}"
