--- a/host_vars/webgw01/firewalld.yml
+++ b/host_vars/webgw01/firewalld.yml
@@ -7,15 +7,15 @@ firewall_rules:
   # Alertmanager cluster, thanks masquarade
   - port: "{{ alertmanager_port }}"
     zone: internal
-    source: "{{ hostvars['mt-router'].wireguard_ip }}"
+    source: "{{ hostvars['rb5009'].wireguard_ip }}"
   - port: "{{ prometheus_port }}"
     zone: internal
-    source: "{{ hostvars['mt-router'].wireguard_ip }}"
+    source: "{{ hostvars['rb5009'].wireguard_ip }}"
   - port: "{{ alertmanager_peer_port }}"
     protocol: tcp
     zone: internal
-    source: "{{ hostvars['mt-router'].wireguard_ip }}"
+    source: "{{ hostvars['rb5009'].wireguard_ip }}"
   - port: "{{ alertmanager_peer_port }}"
     protocol: udp
     zone: internal
-    source: "{{ hostvars['mt-router'].wireguard_ip }}"
+    source: "{{ hostvars['rb5009'].wireguard_ip }}"
